@@ -572,8 +572,8 @@
 	  (horiz-pos (if (string=? horiz-string "Left") 
 			 (min (car horiz-bounds) (cdr horiz-bounds))
 			 (if (string=? horiz-string "Middle")
-			     (inexact->exact (/ (+ (car horiz-bounds)
-						   (cdr horiz-bounds)) 2))
+			     (ceiling (/ (+ (car horiz-bounds)
+					    (cdr horiz-bounds)) 2))
 			     (if (string=? horiz-string "Right")
 				 (max (car horiz-bounds) (cdr horiz-bounds))
 				 (error (string-append 
@@ -582,8 +582,8 @@
 	  (vertical-pos (if (string=? vertical-string "Lower") 
 			    (min (car vertical-bounds) (cdr vertical-bounds))
 			    (if (string=? vertical-string "Middle")
-				(inexact->exact (/ (+ (car vertical-bounds)
-						      (cdr vertical-bounds)) 2))
+				(ceiling (/ (+ (car vertical-bounds)
+					       (cdr vertical-bounds)) 2))
 				(if (string=? vertical-string "Upper")
 				    (max (car vertical-bounds) 
 					 (cdr vertical-bounds))
